# math-can

./: .gitignore  LICENSE  README.md  pyproject.toml
math_can/: __init__.py  __main__.py  app.py  operators.py  webapp.py
math_can/jobs/: __init__.py  main.py  math_can.py
math_can/utils/: __init__.py  operators.py
tests/: test_math_can.py
